--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@chakra-ui/react": "^1.7.2",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "@fontsource/lato": "^4.5.0",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "dayjs": "^1.10.7",
+    "faker": "^5.5.3",
     "firebase": "^9.5.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
