--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "crypto-js": "^4.1.1",
     "dayjs": "^1.10.7",
     "faker": "^5.5.3",
     "firebase": "^9.5.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
+    "image-conversion": "^2.1.1",
     "lodash": "^4.17.21",
+    "mime-types": "^2.1.34",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
