--- a/.env.default
+++ b/.env.default
@@ -6,3 +6,5 @@ REACT_APP_FB_STORAGE_BUCKET=test
 REACT_APP_FB_MESSAGING_SENDER_ID=test
 REACT_APP_FB_APP_ID=test
 REACT_APP_FB_MEASUREMENT_ID=test
+
+REACT_APP_API_URL="http://localhost:8080"
