--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "@emotion/styled": "^11.6.0",
     "@fontsource/lato": "^4.5.0",
     "@reduxjs/toolkit": "^1.6.2",
-    "@testing-library/jest-dom": "^5.16.0",
+    "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.10.7",
     "faker": "^5.5.3",
@@ -19,6 +20,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "image-conversion": "^2.1.1",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.34",
     "node-sass": "^6.0.1",
